--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -51,7 +51,7 @@ Ergebnissen von einfachen und erweiterten statistischen Algorithmen
 verglichen. \\ \\
 Das Ergebnis ist in Abbildung~\ref{pic:Tetlock_1} dargestellt und wird im
 folgenden Text ausführlich erläutert\footnote{Die Grafik ist eine leicht 
-abgewandelte Version vom Original aus \cite{Tetlock}, S. 51).} \\ \\
+abgewandelte Version vom Original aus \cite{Tetlock}, S. 51).}. \\ \\
 \begin{figure}%[!hbt]
 \centering
 \caption{Bei den \emph{forecasting exercises} erzielte Wertungen.}
@@ -64,7 +64,7 @@ Diskriminierung (\emph{discrimination}), sind auf den Achsen abgebildet. \\ \\
 Kalibrierung (horizontale Achse) misst die Fähigkeit eines Prognostikers,
 Ereignisse korrekt nach ihrer
 Auftrittswahrscheinlichkeit zu ordnen (vgl. \cite{Tetlock}, S.~47). So ist ein
-Prognostiker gut kalibriert, wenn etwa 10~\% der Eregnisse eintreten, für die
+Prognostiker gut kalibriert, wenn etwa 10~\% der Ereignisse eintreten, für die
 er eine Wahrscheinlichkeit von 0.1 geschätzt hat, 20~\% der Ereignisse eintreten
 die eine Wahrscheinlichkeit von 0.2 erhalten haben, und so weiter. Je kleiner
 der numerische Wert der Kalibrierung, desto besser ist der Prognostiker. Bei
