PA Definition begonnen

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -123,3 +123,13 @@ year = {2005},
 isbn = {978-0-691-12871-9},
 language = {english}
 }
+
+@misc{Schmitz,
+author = {Schmitz, Andreas},
+title = {Predictive Analytics: 7 praktische Beispiele},
+howpublished = {SAP News Center - Analytics},
+year = {2016},
+note = {Zugegriffen am: 11.06.2020},
+url = {https://news.sap.com/germany/2016/08/predictive-analytics-in-der-praxis/},
+language = {ngerman}
+}
