--- a/Text/Arbeit/Glossar/Arbeit_Glossar.tex
+++ b/Text/Arbeit/Glossar/Arbeit_Glossar.tex
@@ -31,14 +31,14 @@
 Installieren einer Anwendung oder des Betriebssystems.}}
 
 \newglossaryentry
-{glos:Predictive_Analytics}{name=predictive analytics, description=
+{glos:Predictive_Analytics}{name=Predictive Analytics, description=
 {Die Analyse von Daten mit Hilfe mathematischer und statistischer Methoden.
 Das Ziel von Predictive Analytics ist die Erstellung von Prognosen zur
 Unterstützung der Entscheidungsfindung}
 }
 
 \newglossaryentry
-{glos:PCA}{name=Primary component analysis, description=
+{glos:PCA}{name=Primary Component Analysis, description=
 {Eine Methode zur Variablenreduktion. Dabei wird ein neuer Satz von
 Basisvektoren berechnet, der die Varianz der Daten am Besten beschreibt}
 }
