--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -3,6 +3,23 @@
 
 \section{Begriffsdefinition und -Abgrenzung}
 
+Das primäre Ziel von \emph{\gls{glos:Predictive_Analytics}} ist das Treffen von
+Vorhersagen.
+Hierbei sind nicht nur Prognosen für die Zukunft gemeint, sondern
+auch Einschätzungen und Beurteilungen unklarer Situationen, bei denen die für
+die Entscheidungsfindung wichtigen Daten fehlen (vgl. \cite{Dinov}, S.~9~f.).
+Hier sind einige Anwendungsbeispiele, die verdeutlichen, wie \emph{predictive
+analytics} eingesetzt werden kann (vgl. \cite{Schmitz}):
+\begin{description}
+\item[Betrugserkennung (\emph{fraud detection}):] Geschäftsvorgänge werden
+automatisch analysiert, in der Hoffnung, dass Unregelmäßigkeiten vom System
+erkannt werden. Verdächtige Vorgänge können dann zum Beispiel einer manuellen
+Prüfung unterzogen werden.
+\item[Vorhersage von Wartungszeitpunkten (\emph{predictive maintenance}):]
+Automatische Systeme schätzen die Ausfallwahrscheinlichkeit von Maschinen ein
+und bestimmen den Zeitpunkt für die nächste Inspektion.
+\end{description}
+
 \section{Probleme menschlicher Urteile}
 
 \section{Bestandteile von \emph{predictive analytics}}
@@ -103,7 +120,7 @@ Ordinal & Gleichheit ($=, \neq$), & Kleidungsgöße & \texttt{S}, \texttt{M},
   \texttt{L} \\
         & Vergleiche ($<, >, \ldots$) & & \\
 \hline
-Intervall & Gleichheit ($=, \neq$), & Jahresangabe, & 2015~A.D. \\
+Intervall & Gleichheit ($=, \neq$), & Jahresangabe, & 2015~n.Chr. \\
   & Vergleiche ($<, >, \ldots$), & Temperatur in Grad Celsius & 20~°C \\
   & Addition ($+$), Subtraktion ($-$), &  &  \\
 \hline
