--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -18,6 +18,18 @@ Prüfung unterzogen werden.
 \item[Vorhersage von Wartungszeitpunkten (\emph{predictive maintenance}):]
 Automatische Systeme schätzen die Ausfallwahrscheinlichkeit von Maschinen ein
 und bestimmen den Zeitpunkt für die nächste Inspektion.
+\item[Verringerung von Ausschuss (\emph{predictive quality}):]
+Mit Hilfe von Sensordaten werden fehlerhafte Produkte im Produktionsprozess
+erkannt und herausgefiltert.
+\item[Erkennung von Kundenunzufriedenheit (\emph{churn management}):]
+Muster in Daten, die auf Unzufriedenheit von Kunden deuten, automatisch erkennen
+und rechtzeitig Gegenmaßnahmen versuchen.
+\item[Verbesserung der Zahlungsmoral:]
+Mit Hilfe von Vorhersagen die Randbedingungen verbessern, sodass Kunden
+schneller Rechnungen begleichen.
+\item[Bessere Kontrolle von Personalfluktuationen:]
+Mitarbeiter, die bald einen Arbeitsplatzwechsel vollziehen könnten, mit Hilfe
+von Vorhersagemodellen erkennen, um rechtzeitig darauf reagieren zu können.
 \end{description}
 
 \section{Probleme menschlicher Urteile}
