PA Grafik hinzugefügt

--- a/Text/Arbeit/Glossar/Arbeit_Glossar.tex
+++ b/Text/Arbeit/Glossar/Arbeit_Glossar.tex
@@ -14,21 +14,20 @@
 %}
 
 %Akronyme
-\newacronym{MS}{MS}{Microsoft}
-%\newacronym{CD}{CD}{Compact Disc}
+
+%\newacronym{MS}{MS}{Microsoft}
+
 %Eine Akronym mit Glossareintrag
-%\newacronym{AD}{AD}{Active Directory\protect\glsadd{glos:AD}}
 \newacronym{PCA}{PCA}{Primary Component Analysis\protect\glsadd{glos:PCA}}
 
 %Glossareinträge
+
 %\newglossaryentry{glos:AD}{
 %name=Active Directory,
 %description={Active Directory ist in einem Windows 2000/" "Windows
 %Server 2003-Netzwerk der Verzeichnisdienst, der die zentrale ...
 %}
 %}
-\newglossaryentry{glos:AntwD}{name=Antwortdatei, description={Informationen zum
-Installieren einer Anwendung oder des Betriebssystems.}}
 
 \newglossaryentry
 {glos:Predictive_Analytics}{name=Predictive Analytics, description=
