--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -133,3 +133,13 @@ note = {Zugegriffen am: 11.06.2020},
 url = {https://news.sap.com/germany/2016/08/predictive-analytics-in-der-praxis/},
 language = {ngerman}
 }
+
+@misc{Parthasarathy,
+author = {Parthasarathy, Sriram},
+title = {What Is Predictive Analytics?},
+howpublished = {Logi Analytics},
+year = {2017},
+note = {Accessed: 02.09.2020},
+url = {https://www.logianalytics.com/predictive-analytics/what-is-predictive-analytics/},
+language = {english}
+}
