Abb. Tetlock 2 hinzugefügt

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -56,6 +56,14 @@ handelt.
 
 \section{Probleme menschlicher Urteile}
 
+\begin{figure}%[!hbt]
+\centering
+\caption{Leistungsunterschiede bei den \emph{forecasting exercises} in
+  Abhängigkeit von den mentalen Charakteristika der Teilnehmer.}
+\includegraphics[scale=0.9]{Grafiken/Tetlock_2_Ink.pdf} 
+\label{pic:Tetlock_2}
+\end{figure}
+
 \section{Bestandteile von \emph{predictive analytics}}
 
 Bei \emph{predictive analytics} werden Daten mit Hilfe von geeigneten Methoden
