--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -164,6 +164,13 @@ citecolor=MidnightBlue }
 
 \chapter{Predictive Analytics im öffentlichen Sektor}
 
+\begin{figure}%[!hbt]
+\centering
+\caption{Risikomatrix für die Nutzung maschineller Entscheidungshilfen.}
+\includegraphics[scale=1.0]{Grafiken/Risk_Matrix_Ink.pdf} 
+\label{pic:Risiko_Matrix}
+\end{figure}
+
 \section{Übersicht}
 
 \section{Thematische Schwerpunkte}
