--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -143,3 +143,13 @@ note = {Accessed: 02.09.2020},
 url = {https://www.logianalytics.com/predictive-analytics/what-is-predictive-analytics/},
 language = {english}
 }
+
+@misc{Watson,
+author = {Watson, Kylie},
+title = {Predictive analytics in health care - Emerging value and risks},
+howpublished = {Deloitte. Insights},
+year = {2019},
+note = {Accessed: 14.09.2020},
+url = {https://www2.deloitte.com/us/en/insights/topics/analytics/predictive-analytics-health-care-value-risks.html},
+language = {english}
+}
