PA Methoden Abbildung hinzugefügt

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -203,6 +203,13 @@ Proportional & Gleichheit ($=, \neq$), & Alter, & 21 Jahre \\
 
 \subsection{Methoden}
 
+\begin{figure}%[!hbt]
+\centering
+\caption{\emph{Predictive analytics} Methoden aus der Anwenderperspektive.}
+\includegraphics[scale=1.0]{Grafiken/PA_Methoden_Ink.pdf} 
+\label{pic:PA_Methoden}
+\end{figure}
+
 \subsubsection{Die Großen Drei}
 
 \paragraph{Regression}
