Probleme menschlicher Urteile begonnen

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -56,6 +56,37 @@ handelt.
 
 \section{Probleme menschlicher Urteile}
 
+Die meisten Urteile und Prognosen werden von Menschen gefällt, ohne statistische
+Modelle und Vorhersagealgorithmen zu nutzen. Grundsätzlich fällt jeder Mensch
+Urteile, macht Vorhersagen und nutzt diese um Entscheidungen zu treffen. Aus
+diesem Grund ist ein gutes Urteilsvermögen eine Eigenschaft, die eigentlich
+universell gebraucht wird. Für die großen gesellschaftlichen Entscheidungen
+versorgen Experten Wirtschaft, Politik und Öffentlichkeit mit Prognosen und
+Einschätzungen. Dabei ist es üblich routinemäßig Expertenmeinungen einzuholen,
+unüblich ist es allerdings, systematisch die Qualität dieser Urteile zu
+überprüfen (vgl. \cite{Tetlock}, S.~1). Aus diesem Grund hat der Psychologe
+Philip Tetlock sich zur Aufgabe gemacht, \glqq{gutes} Urteilsvermögen\grqq
+formal fassbar zu machen (vgl. \cite{Tetlock}, S.~3). Nach Tetlock sollte gutes
+Urteilsvermögen anhand zweier Kriterien gemessen werden (vgl. \cite{Tetlock},
+S.~7):
+\begin{description}
+\item[(1) Richtigkeit der Vorhersagen (\emph{get it right}):]
+Empirische Korrespondenztests sollen genutzt werden, um zu überprüfen, wie gut
+die Meinungen und Vorhersagen von Experten mit der Wirklichkeit übereinstimmen.
+\item[(2) Logische Konsistenz des Denkmodells (\emph{think the right way}):]
+Die Gedanken von Experten sollten logisch konsistent sein. Genauer ausgedrückt
+bedeutet dies, dass die Denkmodelle nicht die Gesetze der Logik und der
+Statistik missachten sollten. Zudem sollte eine Person mit einem guten
+Urteilsvermögen ihre Glaubenssätze an neue Erkenntnisse anpassen können.
+\end{description}
+Dabei sollte die experimentelle Psychologie die notwendigen Fakten und
+Einsichten liefern (vgl. \cite{Tetlock}, S.~8).
+
+\subsection{Tetlocks \emph{forecasting exercises}}
+
+Für die empirischen Korresponenztests führten Tetlock und sein Team eine Reihe
+von \emph{forecasting exercises} durch. 
+
 \begin{figure}%[!hbt]
 \centering
 \caption{Leistungsunterschiede bei den \emph{forecasting exercises} in
