--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -132,7 +132,7 @@ citecolor=MidnightBlue }
 %
 
 % https://www.overleaf.com/learn/latex/Tables
-\setlength{\arrayrulewidth}{0.5mm}
+%\setlength{\arrayrulewidth}{0.5mm}
 \setlength{\tabcolsep}{18pt}
 \renewcommand{\arraystretch}{1.5}
 
