--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -34,7 +34,7 @@ dass Experten zu politischen Fragen keine besseren Prognosen liefern konnten,
 als die einfachsten statistischen Algorithmen. Zudem hatten die Experten
 große Schwierigkeiten damit, ihre Prognosen angesichts schlechter Resultate
 anzupassen und zu verbessern. \\ \\
-Die Experten sollten ihr Können bei mehreren Übungen zu Vorhersagen
+Die Experten sollten ihr Können bei mehreren Prognoseaufgaben
 (\emph{forecasting exercises}) unter Beweis stellen. Dabei wurden verschiedene
 mögliche politische oder wirtschaftliche Ereignisse skizziert und die Experten
 sollten subjektiv abschätzen, für wie wahrscheinlich sie es halten, dass das
