Tabelle 'Kognitive Verzerrungen' begonnen

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -82,7 +82,7 @@ Urteilsvermögen ihre Glaubenssätze an neue Erkenntnisse anpassen können.
 Dabei sollte die experimentelle Psychologie die notwendigen Fakten und
 Einsichten liefern (vgl. \cite{Tetlock}, S.~8).
 
-\subsection{Tetlocks \emph{forecasting exercises}}
+\subsection{Tetlocks Forecasting Exercises}
 
 Für die empirischen Korresponenztests führten Tetlock und sein Team eine Reihe
 von \emph{forecasting exercises} durch. 
@@ -103,6 +103,50 @@ Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
 (vgl. \cite{Tetlock}, S.~39). Somit sind die Ergebnisse schlecht, weil
 nüchterner Realismus unerwünscht ist. Die Aufrechterhaltung von Glaubenssätzen,
 die zum kollektiven Zusammenhalt beitragen, hat höhere Priorität.
+
+\begin{table}
+\centering
+\caption{Ausgewählte Beispiele für kognitive Verzerrungen}
+\label{tab:Kognitive_Verzerrungen}
+\scalebox{0.7}{
+\begin{tabular}{ |l|l|l|  }
+\hline
+\textbf{Bezeichnung der kognitiven Verzerrung} & \textbf{Sinngemäße Übersetzung}
+  & \textbf{Kurzbeschreibung} \\
+\hline
+{ \large \emph{Attribution bias} } & Zuschreibungsfehler
+  & Die Tendenz, Erfolge \\
+& & seinen eigenen Fähigkeiten \\
+& & zuzuschreiben; \\
+& & Misserfolge hingegen \\
+& & externen Zuständen. \\
+\hline
+{ \large \emph{Availability bias} } & Verfügbarkeitsfehler
+  & Beispiele für Szenarien, \\
+& & die unmittelbar mit einem \\
+& & Ereignis assoziiert werden, \\
+& & bestimmen die Einschätzung \\
+& & dieses Ereignisses. \\
+\hline
+{ \large \emph{Cognitive conservatism} } & Kognitiver Konservatismus
+  & Weigerung von Menschen, \\
+& & Fehler zuzugeben und \\
+& & ihre Meinung zu ändern. \\
+\hline
+{ \large \emph{Gambler's fallacy} } & Irrtum des Glücksspielers
+  & Der irrtümliche Glaube an \\
+& & regelmäßige Muster \\ 
+& & in zufälligen Prozessen. \\
+\hline
+{ \large \emph{Hindsight bias} } & Rückschaufehler
+  & Der Versuch eine Einschätzung \\
+& & eines Ereignisses, nach dessen \\
+& & Eintreten, rückwirkend zu \\
+& & verändern. \\
+\hline
+\end{tabular}
+}
+\end{table}
 
 \section{Bestandteile von \emph{predictive analytics}}
 
@@ -212,19 +256,6 @@ Proportional & Gleichheit ($=, \neq$), & Alter, & 21 Jahre \\
   & Addition ($+$), Subtraktion ($-$), &  &  \\
   & Multiplikation ($\cdot$), Division ($/$) & & \\
 \hline
-
-%\multicolumn{3}{|c|}{Country List} \\
-%\hline
-%Country Name     or Area Name& ISO ALPHA 2 Code &ISO ALPHA 3 \\
-%\hline \hline
-%Afghanistan & AF &AFG \\
-%Aland Islands & AX   & ALA \\
-%Albania &AL & ALB \\
-%Algeria    &DZ & DZA \\
-%American Samoa & AS & ASM \\
-%Andorra & AD & AND   \\
-%Angola & AO & AGO \\
-%\hline
 \end{tabular}
 }
 \end{table}
