Tabelle 'Kognitive Verzerrungen' fertig

--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -1,4 +1,5 @@
 \chapter{Einleitung}
+\label{part:Einleitung}
 
 In dieser Arbeit soll die Anwendung von Datenanalysen und insbesondere
 von \emph{\gls{glos:Predictive_Analytics}} im öffentlichen Sektor untersucht
