--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -85,7 +85,9 @@ Einsichten liefern (vgl. \cite{Tetlock}, S.~8).
 \subsection{Tetlocks Forecasting Exercises}
 
 Für die empirischen Korresponenztests führten Tetlock und sein Team eine Reihe
-von \emph{forecasting exercises} durch. 
+von \emph{forecasting exercises} mit Experten durch. Diese Expertenbefragungen
+wurden bereits in Teil~\ref{part:Schw_Vorhersagen} thematisiert und sollen nun
+detaillierter erläutert werden.
 
 \subsection{Detaillierte Ergebnisse der \emph{forecasting exercises}}
 
@@ -93,7 +95,7 @@ von \emph{forecasting exercises} durch.
 \centering
 \caption{Leistungsunterschiede bei den \emph{forecasting exercises} in
   Abhängigkeit von den mentalen Charakteristika der Teilnehmer.}
-\includegraphics[scale=0.9]{Grafiken/Tetlock_2_Ink.pdf} 
+\includegraphics[scale=0.88]{Grafiken/Tetlock_2_Ink.pdf} 
 \label{pic:Tetlock_2}
 \end{figure}
 
@@ -114,6 +116,12 @@ die zum kollektiven Zusammenhalt beitragen, hat höhere Priorität.
 \textbf{Bezeichnung der kognitiven Verzerrung} & \textbf{Sinngemäße Übersetzung}
   & \textbf{Kurzbeschreibung} \\
 \hline
+{ \large \emph{Anchoring} } & Ankereffekt
+  & Beharren auf einer ersten \\
+& & Schätzung eines Wertes; \\
+& & unzureichende Anpassung\\
+& & nach weiterem Überlegen.\\
+\hline
 { \large \emph{Attribution bias} } & Zuschreibungsfehler
   & Die Tendenz, Erfolge \\
 & & seinen eigenen Fähigkeiten \\
@@ -127,6 +135,12 @@ die zum kollektiven Zusammenhalt beitragen, hat höhere Priorität.
 & & Ereignis assoziiert werden, \\
 & & bestimmen die Einschätzung \\
 & & dieses Ereignisses. \\
+\hline
+{ \large \emph{Base rate neglect} } & Vernachlässigung von Basisraten
+  & Vernachlässigung allgemeiner \\
+& & Wahrscheinlichkeiten und \\
+& & Konzentration auf fallspezifische \\
+& & Informationen. \\
 \hline
 { \large \emph{Cognitive conservatism} } & Kognitiver Konservatismus
   & Weigerung von Menschen, \\
@@ -143,6 +157,10 @@ die zum kollektiven Zusammenhalt beitragen, hat höhere Priorität.
 & & eines Ereignisses, nach dessen \\
 & & Eintreten, rückwirkend zu \\
 & & verändern. \\
+\hline
+{ \large \emph{Overconfidence effect} } & Selbstüberschätzung
+  & Überschätzung der Richtigkeit \\
+& & eigener Urteile. \\
 \hline
 \end{tabular}
 }
