Abbildung 'Facebook Likes' hinzugefügt

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -202,6 +202,13 @@ citecolor=MidnightBlue }
 
 \section{Cambridge Analytica}
 
+\begin{figure}%[!hbt]
+\centering
+\caption{Nutzung von Facebook Likes zur Vorhersage von Nutzerattributen}
+\includegraphics[scale=1.0]{Grafiken/Facebook_Likes_Ink.pdf} 
+\label{pic:Like_Matrix}
+\end{figure}
+
 % TODO Auflistungstabelle
 % Kategorie | Anwendung | Beispiel
 
