Forecasting Exercises Beschreibung hinzugefügt

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -153,3 +153,12 @@ note = {Accessed: 14.09.2020},
 url = {https://www2.deloitte.com/us/en/insights/topics/analytics/predictive-analytics-health-care-value-risks.html},
 language = {english}
 }
+
+@book{Eisenfuehr,
+author = {Eisenführ, Franz and Weber, Martin},
+title = {Rationales Entscheiden},
+publisher = {Springer},
+year = {2003},
+isbn = {978-3-662-09668-0},
+language = {ngerman}
+}
