--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -47,9 +47,9 @@ Nachdem das festgelegte Zeitfenster für die Ereignisse abgelaufen war, konnte
 das Eintreten oder Nichteintreten der jeweiligen Szenarien beobachtet werden und
 rückblickend mit den Vorhersagen der Teilnehmer abgeglichen werden.  
 Zur Messung der Genauigkeit der Vorhersagen wurde eine Maßzahl,
-der \emph{probability score} verwendet. Dabei wurden ihre Vorhersagen mit den
-Ergebnissen von einfachen und erweiterten statistischen Algorithmen
-verglichen. \\ \\
+der \emph{probability score} verwendet. Dadurch konnten die Vorhersagen der
+menschlichen Teilnehmer mit den Ergebnissen von einfachen und erweiterten
+statistischen Algorithmen verglichen werden. \\ \\
 Das Ergebnis ist in Abbildung~\ref{pic:Tetlock_1} dargestellt und wird im
 folgenden Text ausführlich erläutert\footnote{Die Grafik ist eine leicht 
 abgewandelte Version vom Original aus \cite{Tetlock}, S. 51).}. \\ \\
