--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -71,6 +71,7 @@ Urteilsvermögen anhand zweier Kriterien gemessen werden (vgl. \cite{Tetlock},
 S.~7):
 \begin{description}
 \item[(1) Richtigkeit der Vorhersagen (\emph{get it right}):]
+\label{misc:Emp_Korr}
 Empirische Korrespondenztests sollen genutzt werden, um zu überprüfen, wie gut
 die Meinungen und Vorhersagen von Experten mit der Wirklichkeit übereinstimmen.
 \item[(2) Logische Konsistenz des Denkmodells (\emph{think the right way}):]
@@ -87,9 +88,48 @@ Einsichten liefern (vgl. \cite{Tetlock}, S.~8).
 Für die empirischen Korresponenztests führten Tetlock und sein Team eine Reihe
 von \emph{forecasting exercises} mit Experten durch. Diese Expertenbefragungen
 wurden bereits in Teil~\ref{part:Schw_Vorhersagen} thematisiert und sollen nun
-detaillierter erläutert werden.
+detaillierter erläutert werden. \\ \\
+Insgesamt wurden die Urteile von 284 Experten analysiert. Diese hatten im
+Durchschnitt 12 Jahre Berufserfahrung und die Hälfte (52~\%) besaß einen
+Doktortitel. Etwa 61~\% der Teilnehmer wurden mindestens einmal von den Medien
+interviewt und 21~\% mehr als zehnmal. Etwa 80~\% der Experten waren mindestens
+einmal als Berater für internationale politische oder wirtschaftliche
+Angelegenheiten tätig. (vgl. \cite{Tetlock}, S.~239-240)\\ \\
+Die Befragten sollten Prognosen erstellen, indem sie auf Fragen zu zukünftigen
+Entwicklungen in Politik und Wirtschaft antworteten. Dabei handelte es sich um
+feste Fragestellungen, die von den Forschern zuvor ausgewählt wurden. Zu den in
+den Fragen formulierten Szenarien sollten die Befragten subjektive
+Wahrscheinlichkeiten\footnote{
+Eine subjektive Wahrscheinlichkeit wird als Grad des Vertrauens einer Person in
+den Eintritt eines Ereignisses interpretiert (vgl. \cite{Eisenfuehr}, S.~152).}
+angeben. (vgl. \cite{Tetlock}, S.~245)\\ \\
+Die Sammlung der Expertenprognosen begann 1987 und erstreckte sich über mehr als
+zehn Jahre. Dabei wurden Fragen über die zukünftige Entwicklung von etwa 60
+Nationen gestellt. (vgl. \cite{Tetlock}, S.~242)\\ \\
+Weiterhin wurden die Fragen in folgende Themenbereiche untergliedert
+(vgl. \cite{Tetlock}, S.~246-248):
+\begin{description}
+\item[(a)] Kontinuität politischer Führung
+\item[(b)] Innen- und Wirtschaftspolitik
+\item[(c)] Nationale Sicherheit und Verteidigungspolitik
+\item[(d)] Zusätzliche Spezialthemen
+\end{description}
+Insgesamt wurden 82 361 subjektive Wahrscheinlichkeiten eingeholt, die als
+Antwort auf 27 450 Fragen gegeben wurden. (vgl. \cite{Tetlock}, S.~246)
 
-\subsection{Detaillierte Ergebnisse der \emph{forecasting exercises}}
+\subsection{Detaillierte Ergebnisse der Forecasting Exercises}
+
+Die Fragen der \emph{forecasting exercises} wurden so formuliert, dass bei allen
+nach einer gewissen Zeitspanne festgestellt werden konnte, ob und welches der
+möglichen Szenarien\footnote{
+Die möglichen Szenarien müssen dabei logisch vollständig sein und sich
+gegenseitig ausschließen (\emph{logically exhaustive and mutually exclusive};
+vgl. \cite{Tetlock}, S.~245).
+} tatsächlich eingetreten ist.
+
+Um die auf Seite~\pageref{misc:Emp_Korr} erwähnte Richtigkeit der Vorhersagen
+zu überprüfen, müssen die subjektiven Wahrscheinlichkeiten mit der eingetretenen
+Wirklichkeit verglichen werden.
 
 \begin{figure}%[!hbt]
 \centering
@@ -98,6 +138,7 @@ detaillierter erläutert werden.
 \includegraphics[scale=0.88]{Grafiken/Tetlock_2_Ink.pdf} 
 \label{pic:Tetlock_2}
 \end{figure}
+
 
 Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
 nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
@@ -165,6 +206,8 @@ die zum kollektiven Zusammenhalt beitragen, hat höhere Priorität.
 \end{tabular}
 }
 \end{table}
+
+\subsection{Auswirkungen von Tetlocks Forschungsergebnissen}
 
 \section{Bestandteile von \emph{predictive analytics}}
 
