Abbildung 'Styles-of-Reasoning' hinzugefügt

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -133,8 +133,17 @@ Wirklichkeit verglichen werden.
 
 \begin{figure}%[!hbt]
 \centering
+\caption{Skala des \emph{Style-of-Reasoning}%, mit den Charakterisierungen
+%  \emph{Fox} und \emph{Hedgehog} als Gegenpole}
+}
+\includegraphics[scale=1]{Grafiken/Hedgehog_Fox.pdf} 
+\label{pic:Hedgehog_Fox}
+\end{figure}
+
+\begin{figure}%[!hbt]
+\centering
 \caption{Leistungsunterschiede bei den \emph{forecasting exercises} in
-  Abhängigkeit von den mentalen Charakteristika der Teilnehmer.}
+  Abhängigkeit von den mentalen Charakteristika der Teilnehmer}
 \includegraphics[scale=0.88]{Grafiken/Tetlock_2_Ink.pdf} 
 \label{pic:Tetlock_2}
 \end{figure}
