Kalibrierung und Diskriminierung ausgeführt

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -139,12 +139,32 @@ Ereignissen (der Wirklichkeit) verrechnet\footnote{
 }. Das Ergebnis ist eine Zahl zwischen 0 und 1, wobei 0 die beste und 1 die
 schlechteste Wertung darstellt. Wenn ein Prognostiker jedes Ereignis, das
 schließlich eintritt, als unmöglich eingestuft hat und jedes Ereignis, welches
-ausbleibt als sicher, dann endet er beim schlechtesten \emph{probability
+ausbleibt, als sicher, dann endet er beim schlechtesten \emph{probability
 score} von 1. Die beste Wertung von 0 kann hingegen nur erreicht werden, indem
 man, zumindest was die gestellten Fragen betrifft, hellseherische Fähigkeiten
 beweist und jedes eingetretene Ereignis mit einer subjektiven Wahrscheinlichkeit
 von 1 bewertet und jedem ausgebliebenen Ereignis eine 0 zugewiesen hat (vgl.
 \cite{Tetlock}, S.~47). \\ \\
+Zudem lässt sich der \emph{probability score} in zwei Komponenten zerlegen, die
+von den Fähigkeiten des Prognostikers abhängen: Kalibrierung
+(\emph{calibration}) und Diskriminierung (\emph{discrimination})\footnote{
+  Die Bedeutung dieser beiden Komponenten wurde auch im einleitenden
+  Teil~\ref{part:Schw_Vorhersagen} erläutert.
+} (vgl. \cite{Tetlock}, S.~47). \\ \\
+Die Kalibrierung misst wie gut ein Prognostiker
+Ereignisse in Wahrscheinlichkeitskategorien einordnen kann\footnote{
+  10~\% der Ereignisse aus der 0.1 Kategorie treten ein, 20~\% der Ereignisse
+  aus der 0.2 Kategorie usw. 
+}. Der Wertebereich der Kalibrierung liegt zwischen 0 und 1, wobei 0 den besten
+und 1 den schlechtesten Wert darstellt (vgl. \cite{Tetlock}, S.~275). \\ \\
+Die Diskriminierung misst wie gut sich die subjektiven Wahrscheinlichkeiten des 
+Prognostikers von der relativen Häufigkeit (\emph{base-rate}) aller betrachteten
+Ereignisse abheben. Der Wertebereich der Diskriminierung reicht von 0 bis zu
+einem Wert, der die Unsicherheit der Umgebung, für die die Prognosen erstellt
+werden, widerspiegelt (vgl. \cite{Tetlock}, S.~278). Im Falle der
+Diskriminierung ist 0 der schlechteste Wert. Im besten Fall ist der Wert der
+Diskriminierung gleich dem Wert der Unsicherheit. \\ \\
+ 
 
 
 % Wertebereich, was gut - schlecht
